Add example route with MongoDB query

--- a/example.env
+++ b/example.env
@@ -1,3 +1,7 @@
 SERVER_PORT=8080
 
 API_KEY=api_key
+
+MONGO_TEST_CONNECTION_STRING=mongodb://localhost:27017/test
+
+MONGO_TEST_PERSON_COLLECTION=person
