--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
         "dotenv": "^16.0.0",
         "express": "^4.17.3",
+        "joi": "^17.6.0",
         "module-alias": "^2.2.2",
         "mongoose": "^6.2.4"
     },
