--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
         "express": "^4.17.3",
         "joi": "^17.6.0",
         "module-alias": "^2.2.2",
-        "mongoose": "^6.2.4"
+        "mongoose": "^6.2.4",
+        "winston": "^3.6.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.15",
