--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "joi": "^17.6.0",
         "module-alias": "^2.2.2",
         "mongoose": "^6.2.4",
+        "uuid": "^8.3.2",
         "winston": "^3.6.0"
     },
     "devDependencies": {
